objects/Service_Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Tickets</relationshipLabel>
        <relationshipName>Service_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerSite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustomerSite</label>
        <referenceTo>Customer_Site__c</referenceTo>
        <relationshipLabel>Service Tickets</relationshipLabel>
        <relationshipName>Service_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerSystem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustomerSystem</label>
        <referenceTo>Customer_Systems__c</referenceTo>
        <relationshipLabel>Service Tickets</relationshipLabel>
        <relationshipName>Service_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Safe_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Safe Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Account__c</fullName>
        <label>System Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <label>Ticket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Ticket</label>
    <listViews>
        <fullName>Tech_Support_1_Service_Ticket</fullName>
        <filterScope>Queue</filterScope>
        <label>Tech Support</label>
        <queue>Tech_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Service Ticket Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>